--- a/100 solved tasks/100 solved tasks.csproj
+++ b/100 solved tasks/100 solved tasks.csproj
@@ -58,6 +58,7 @@
     <Compile Include="if_else_switch.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Task.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
